Projects scrollbar fixed

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -92,7 +92,7 @@
 
   &::-webkit-scrollbar-thumb {
     background-color: rgba($darkCold, 0.6);
-    outline: 50px solid $darkCold;
+    // outline: 50px solid $darkCold;
     border-radius: 20px;
   }
 }
